Frankbelford/uatv1ba/force-app/main/default/objects/Sales_Campaign__c/Sales_Campaign__c.object-meta.xml
<CustomObject>
    <label>Sales Campaign</label>
    <nameField>
        <label>Sales Campaign Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Campaigns</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>