Frankbelford/uatv1ba/force-app/main/default/objects/Sales_Campaign__c/fields/Branch_Match__c.field-meta.xml
<CustomField>
    <fullName>Branch_Match__c</fullName>
    <formula>IF($User.CDP_View__c = Owner:User.UserRole.Name,TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Branch Match</label>
    <type>Checkbox</type>
</CustomField>