Frankbelford/uatv1ba/force-app/main/default/objects/Sales_Campaign__c/fields/Outcome__c.field-meta.xml
<CustomField>
    <fullName>Outcome__c</fullName>
    <label>Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Won</fullName>
            </value>
            <value>
                <fullName>Payment terms</fullName>
            </value>
            <value>
                <fullName>Lost to competitor</fullName>
            </value>
            <value>
                <fullName>Credit check fail</fullName>
            </value>
            <value>
                <fullName>Passed to colleague</fullName>
            </value>
            <value>
                <fullName>Rates too high</fullName>
            </value>
            <value>
                <fullName>Come back to this client again later</fullName>
            </value>
            <value>
                <fullName>PSL</fullName>
            </value>
            <value>
                <fullName>Asked not to recontact</fullName>
            </value>
            <value>
                <fullName>Client ceased trading</fullName>
            </value>
            <value>
                <fullName>Change of ownership</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>