Frankbelford/uatv1ba/force-app/main/default/objects/Sales_Campaign__c/fields/Sales_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Sales_Campaign__c</fullName>
    <label>Sales Campaign</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Client Development Planner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>