Frankbelford/uatv1ba/force-app/main/default/objects/Sales_Campaign__c/fields/User_Owned__c.field-meta.xml
<CustomField>
    <fullName>User_Owned__c</fullName>
    <formula>IF(Owner:User.Id=$User.Id,TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User Owned</label>
    <type>Checkbox</type>
</CustomField>